[package]
name = "wireguard-conf"
description = "Construct Wireguard's interface and peer configs"
keywords = ["wireguard", "amnezia", "builder"]

version = "0.2.1"
edition = "2021"

license = "MIT"
readme = "README.md"
homepage = "https://github.com/idkncc/wireguard-conf"
repository = "https://github.com/idkncc/wireguard-conf"

exclude = ["tests/", ".github/", "TODO.md", ".gitignore"]

[features]
amneziawg = []

[dependencies]
base64 = "0.22.1"
either = "1.13.0"
ipnet = "2.11.0"
thiserror = "2.0.11"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "getrandom"] }

rand = { version = "0.9.0", features = ["small_rng"] }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

# Doc all features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
